[gd_scene load_steps=19 format=3 uid="uid://b4oy3gjuok4k8"]

[ext_resource type="Script" path="res://player/player.gd" id="1_0qa20"]
[ext_resource type="AudioStream" uid="uid://dyfrasw5cj2n0" path="res://SFX/individual step.wav" id="2_q2peh"]
[ext_resource type="AudioStream" uid="uid://b25p0o55otcqn" path="res://SFX/dash.wav" id="3_xkqg0"]
[ext_resource type="AudioStream" uid="uid://25o2p76vqacd" path="res://SFX/jump.wav" id="4_1w5m8"]
[ext_resource type="PackedScene" uid="uid://cojvgu3wuyscn" path="res://ui_scenes/pause_menu.tscn" id="5_y2ghk"]
[ext_resource type="PackedScene" uid="uid://c3iic2i1qaa18" path="res://ui_scenes/powerup_pickup.tscn" id="6_0w14c"]
[ext_resource type="PackedScene" uid="uid://jf2276nkej2x" path="res://ui_scenes/win_screen.tscn" id="6_2whh8"]
[ext_resource type="PackedScene" uid="uid://c8hdd8y8huaew" path="res://ui_scenes/restart_screen.tscn" id="7_vbg3a"]
[ext_resource type="Theme" uid="uid://cgprh2heefr62" path="res://assets/default_theme.tres" id="9_8aivl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_omppl"]
height = 4.0

[sub_resource type="Animation" id="Animation_obwpt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_controller:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}

[sub_resource type="Animation" id="Animation_0lwa8"]
resource_name = "run"
length = 0.25
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_footstep_audio"
}]
}

[sub_resource type="Animation" id="Animation_5yod7"]
resource_name = "slide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_controller:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, -0.5, 0)]
}

[sub_resource type="Animation" id="Animation_3bixl"]
resource_name = "small_powerup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_controller:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, -1, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.5, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 1.0]
}

[sub_resource type="Animation" id="Animation_y3xr7"]
resource_name = "small_slide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_controller:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, -1), Vector3(0, -1.25, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_b8n3r"]
resource_name = "walk_sound"
length = 0.35
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_footstep_audio"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0p713"]
_data = {
"RESET": SubResource("Animation_obwpt"),
"run_sound": SubResource("Animation_0lwa8"),
"slide": SubResource("Animation_5yod7"),
"small_powerup": SubResource("Animation_3bixl"),
"small_slide": SubResource("Animation_y3xr7"),
"walk_sound": SubResource("Animation_b8n3r")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ckmys"]
size = Vector3(1.35352, 1.1543, 1.50684)

[node name="player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82934, 0)
collision_layer = 3
script = ExtResource("1_0qa20")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("CapsuleShape3D_omppl")

[node name="cam_controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="camera" type="Camera3D" parent="cam_controller"]
current = true

[node name="marker" type="Marker3D" parent="cam_controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0p713")
}

[node name="small_powerup" type="Timer" parent="."]
wait_time = 20.0

[node name="player_audios" type="Node3D" parent="."]

[node name="footstep" type="AudioStreamPlayer3D" parent="player_audios"]
stream = ExtResource("2_q2peh")

[node name="dash" type="AudioStreamPlayer3D" parent="player_audios"]
stream = ExtResource("3_xkqg0")
volume_db = -40.0
pitch_scale = 0.9

[node name="jump" type="AudioStreamPlayer3D" parent="player_audios"]
stream = ExtResource("4_1w5m8")
volume_db = -30.0

[node name="pause_menu" parent="." instance=ExtResource("5_y2ghk")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="win_screen" parent="." instance=ExtResource("6_2whh8")]
visible = false

[node name="restart_screen" parent="." instance=ExtResource("7_vbg3a")]
visible = false

[node name="powerup_pickup" parent="." instance=ExtResource("6_0w14c")]
visible = false

[node name="Label" parent="powerup_pickup" index="0"]
offset_left = -206.5
offset_top = 40.0
offset_right = 206.5
offset_bottom = 73.0
theme = ExtResource("9_8aivl")
theme_override_font_sizes/font_size = 41

[node name="WallArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallArea"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_ckmys")

[connection signal="timeout" from="small_powerup" to="." method="_on_small_powerup_timeout"]
[connection signal="body_entered" from="WallArea" to="." method="_on_wall_jump_entered"]
[connection signal="body_exited" from="WallArea" to="." method="_on_wall_jump_exited"]

[editable path="powerup_pickup"]
